V0.35.6 - Fixed Registration Tablet Viewport. Fixed account creation bug. Fixed form preferences bugs.

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,11 +1,8 @@
 html, body {
 	max-height: 100vh;
 	max-width: 100vw;
-	width: 100vw;
 }
 
-@media screen and (min-width: 1024px) {
-	html, body {
-		overflow-y: hidden;
-	}
+html {
+	height: 100vh;
 }
